[bug][index] fix spacing under img in why us section

--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -65,6 +65,12 @@
 	}
 }
 
+.shop-with-us.brand-pink {
+	img {
+		margin-bottom: 1.8rem;
+	}
+}
+
 .email-sub {
 	background-color: #f6e2d5;
 	min-height: 312px;
